{
  "version": 4,
  "terraform_version": "1.15.9",
  "serial": 31,
  "lineage": "b66052c7-5a6d-c0ef-7e18-7f8831dbd307",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587762853465:vpc/vpc-02280b612822e3a5b",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-03fa07e22245036d0",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-09a2a263d307d7f04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02280b612822e3a5b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-011b5b810dc843d1b",
            "owner_id": "587762853465"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587762853465:loadbalancer/app/world-cup-web-scraper-prod-alb/b20c049936344409",
            "arn_suffix": "app/world-cup-web-scraper-prod-alb/b20c049936344409",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "world-cup-web-scraper-prod-alb-1962688368.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:587762853465:loadbalancer/app/world-cup-web-scraper-prod-alb/b20c049936344409",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "world-cup-web-scraper-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0315d5e52f0207d15"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004bdb4c23244c13e"
              },
              {
                "subnet_id": "subnet-020396198876055b5"
              },
              {
                "subnet_id": "subnet-04665efd071c76d17"
              },
              {
                "subnet_id": "subnet-0625bb627be6b12f9"
              },
              {
                "subnet_id": "subnet-097094949ec7a9c36"
              },
              {
                "subnet_id": "subnet-0d4f3e1602df8f0b6"
              }
            ],
            "subnets": [
              "subnet-004bdb4c23244c13e",
              "subnet-020396198876055b5",
              "subnet-04665efd071c76d17",
              "subnet-0625bb627be6b12f9",
              "subnet-097094949ec7a9c36",
              "subnet-0d4f3e1602df8f0b6"
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "world-cup-web-scraper"
            },
            "vpc_id": "vpc-02280b612822e3a5b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_subnets.selected",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587762853465:listener/app/world-cup-web-scraper-prod-alb/b20c049936344409/53b9b9658f9b4702",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:587762853465:targetgroup/world-cup-web-scraper-prod-tg/504261760ed9a631",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587762853465:listener/app/world-cup-web-scraper-prod-alb/b20c049936344409/53b9b9658f9b4702",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:587762853465:loadbalancer/app/world-cup-web-scraper-prod-alb/b20c049936344409",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "world-cup-web-scraper"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "data.aws_subnets.selected",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:587762853465:targetgroup/world-cup-web-scraper-prod-tg/504261760ed9a631",
            "arn_suffix": "targetgroup/world-cup-web-scraper-prod-tg/504261760ed9a631",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:587762853465:targetgroup/world-cup-web-scraper-prod-tg/504261760ed9a631",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:587762853465:loadbalancer/app/world-cup-web-scraper-prod-alb/b20c049936344409"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "world-cup-web-scraper-prod-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "world-cup-web-scraper"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-02280b612822e3a5b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587762853465:security-group/sg-0315d5e52f0207d15",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0315d5e52f0207d15",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "world-cup-web-scraper-prod-alb",
            "name_prefix": "",
            "owner_id": "587762853465",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "world-cup-web-scraper"
            },
            "timeouts": null,
            "vpc_id": "vpc-02280b612822e3a5b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:587762853465:security-group/sg-06111d2040dea4a2d",
            "description": "ECS service security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06111d2040dea4a2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from ALB to app port",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0315d5e52f0207d15"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "world-cup-web-scraper-prod-ecs-service",
            "name_prefix": "",
            "owner_id": "587762853465",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "terraform",
              "Project": "world-cup-web-scraper"
            },
            "timeouts": null,
            "vpc_id": "vpc-02280b612822e3a5b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}